objects/Audit_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Audit History</relationshipLabel>
        <relationshipName>Audit_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Error</label>
        <referenceTo>Error__c</referenceTo>
        <relationshipLabel>Audit History</relationshipLabel>
        <relationshipName>Audit_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Object_Name__c</fullName>
        <label>New Object Name</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Object_Name__c</fullName>
        <label>Old Object Name</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Id__c</fullName>
        <label>Task_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>